with the template errror

--- a/finalProjectCpp/finalProjectCpp.vcxproj
+++ b/finalProjectCpp/finalProjectCpp.vcxproj
@@ -104,10 +104,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\User\Downloads\libxl-win-4.3.0.14\libxl-4.3.0.14\include_cpp</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\User\Downloads\libxl-win-4.3.0.14\libxl-4.3.0.14\include_cpp</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libxl.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -128,6 +131,24 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="finalProjectCpp.cpp" />
+    <ClCompile Include="fromExcel.cpp" />
+    <ClCompile Include="functions.cpp" />
+    <ClCompile Include="node.cpp" />
+    <ClCompile Include="nodeInAxis.cpp" />
+    <ClCompile Include="nodesManager.cpp" />
+    <ClCompile Include="priorityAxis.cpp" />
+    <ClCompile Include="priorityQueue.cpp" />
+    <ClCompile Include="st.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="fromExcel.h" />
+    <ClInclude Include="functions.h" />
+    <ClInclude Include="node.h" />
+    <ClInclude Include="nodeInAxis.h" />
+    <ClInclude Include="nodesManager.h" />
+    <ClInclude Include="priorityAxis.h" />
+    <ClInclude Include="priorityQueue.h" />
+    <ClInclude Include="st.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
