--- a/finalProjectCpp/finalProjectCpp.vcxproj.filters
+++ b/finalProjectCpp/finalProjectCpp.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClCompile Include="fromExcel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Element.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="carsInSt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="functions2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="functions.h">
@@ -66,6 +75,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="fromExcel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Element.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="carsInSt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="functions2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
